# echoes

./: .gitignore  DEBUG.md  DECISIONS.md  Echoes - Transformation Roguelike Development Guide.md  README.md  STATUS.md  StatsManager_Implementation_Instructions.md  architecture.md  body-system-ideas.md  body.md  bodyparts.csv  camera-implementation-guide.md  claude.md  enemies.csv  game-analysis.md  game_template.ts  index.html  makingnewbodyparts.md  newbodyparts.csv  package-lock.json  package.json  progress.md  stats.csv  stats.md  statsmanager-critique.md  taxonomy.md  unified-ui-architecture.md  vite.config.ts  xp-table.csv
.claude/: settings.local.json
.devcontainer/: devcontainer.json
data/: bodyparts.csv  enemies.csv  stats.csv  wavetimes.csv
examples/shop/: brotato-shop.ai  shop-text.html
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/game/: BodyPart.ts  BodyPartLoader.ts  DamageNumber.ts  Enemy.ts  FloatingText.ts  Game.ts  Player.ts  PreSpawnIndicator.ts  Projectile.ts  Soma.ts  SpawnManager.ts  WaveDataLoader.ts  Weapon.ts  XPCrystal.ts
src/game/stats/: StatDefinition.ts  Stats.ts  StatsManager.ts  XPTable.ts  index.ts
src/input/: InputManager.ts
src/render/: Renderer.ts
src/ui/: HUD.ts  StatsManager.ts
src/ui/components/: HUD.ts  LevelUpScreen.html  LevelUpScreen.ts  PauseScreen.html  PauseScreen.ts  ShopScreen.html  ShopScreen.ts  StatsPanel.html  StatsPanel.ts  UnifiedUI.css  UnifiedUI.html  UnifiedUI.ts
src/ui/styles/: StatsPanel.css  UnifiedUI.css  common.css  hud.css  levelup.css  pause.css  (+1 more)
src/utils/: Debug.ts
(+6 files in other folders)
